--- a/project_part2_buildBioAgeModel.ipynb
+++ b/project_part2_buildBioAgeModel.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "# Average Life Expectancy in US in 2019 is 78.9 years. Therefore, we will use this as our average death age\n",
     "# The general idea is that, if the Patient died, then we use ( 78.9 - death duration ) to compute adjust_CA\n",
-    "# Otherwise, we follow a rough estimation model to compute adjust_CA\n",
+    "# Otherwise, we follow a rough estimation risk scores model to compute adjust_CA\n",
     "\n",
     "ch_age = Clininc_Data[7]    # read patients's chronological age at CT\n",
     "adjust_CA = []                # create a list to store adjust_CA of the patients\n",
@@ -50,7 +50,7 @@
     "        risk_score = 0\n",
     "        cur_adjust_CA = 0\n",
     "\n",
-    "        # if the age of the person is younger than 60, we consider them to be young, and assign light unhealth indicator weight\n",
+    "        # if the age of the person is younger than 60, we consider them to be young, and assign light risk scores\n",
     "        if ch_age[i] < 60:\n",
     "\n",
     "            # BMI > 30\n",
@@ -97,7 +97,7 @@
     "\n",
     "            cur_adjust_CA = ch_age[i] + diff * risk_score\n",
     "\n",
-    "        elif ch_age[i] > 80: # old person, assign severe unhealth indicator weight\n",
+    "        elif ch_age[i] > 80: # old person, assign severe risk scores\n",
     "            \n",
     "            # BMI > 30\n",
     "            if Clininc_Data[5][i] == 0:\n",
@@ -143,7 +143,7 @@
     "\n",
     "            cur_adjust_CA = ch_age[i] - diff * risk_score\n",
     "\n",
-    "        # if the sample's age is close to US average life expectancy, assign intermediate unhealth indicator weight\n",
+    "        # if the sample's age is close to US average life expectancy, assign intermediate risk scores\n",
     "        else: \n",
     "\n",
     "            # BMI > 30\n",
